--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,8 @@ img {
     position: fixed;
     width: 200px;
     height: auto;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: #fff;
-    
+    background-color: rgba(0, 0, 0, 0.9);
+    color: #ddd;
     border-radius: 5px;
     left: 10px;
     top: 10px;
